[gd_scene load_steps=3 format=3 uid="uid://dwp3f82uyo7dp"]

[ext_resource type="LabelSettings" uid="uid://csob6ho87rhlq" path="res://ui/basic_label.tres" id="1_af38t"]
[ext_resource type="Script" uid="uid://do8yqmt33ny5y" path="res://player/console.gd" id="1_pi4a7"]

[node name="Console" type="Control"]
top_level = true
z_index = 4096
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_pi4a7")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -509.0
offset_top = -25.0
offset_right = 509.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="DayTimeLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ConsoleLineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "Item or event name"

[node name="FoldableContainer" type="FoldableContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
folded = true
title = "Events"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/FoldableContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer/FoldableContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/VBoxContainer/FoldableContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="CurrentEventsLabel" type="Label" parent="CenterContainer/VBoxContainer/FoldableContainer/HBoxContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "The following events are on the current_event array:"
label_settings = ExtResource("1_af38t")
vertical_alignment = 1
autowrap_mode = 3

[node name="PanelContainer2" type="PanelContainer" parent="CenterContainer/VBoxContainer/FoldableContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/VBoxContainer/FoldableContainer/HBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="PassedEventsLabel" type="Label" parent="CenterContainer/VBoxContainer/FoldableContainer/HBoxContainer/PanelContainer2/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "The following events are on the current_event array:"
label_settings = ExtResource("1_af38t")
vertical_alignment = 1
autowrap_mode = 3

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.4531816, 0.8914182, 0, -0.8914182, 0.4531816, 0, 0, 0)
visible = false
light_energy = 1.5
light_bake_mode = 1

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="DirectionalLight3D"]
transform = Transform3D(-0.9214975, 0.34621277, -0.17600858, -0.34621277, -0.5268728, 0.7762357, 0.17600858, 0.7762357, 0.6053752, 0, 0, 0)
light_energy = 1.5
light_bake_mode = 1

[node name="DirectionalLight3D3" type="DirectionalLight3D" parent="DirectionalLight3D/DirectionalLight3D2"]
transform = Transform3D(0.99853146, 0.054075807, 0.0032718694, -0.049828947, 0.89305615, 0.44717738, 0.021259442, -0.44668368, 0.8944393, 0, 0, 0)
light_energy = 1.5
light_bake_mode = 1
